--- a/views/partials/feeds.jade
+++ b/views/partials/feeds.jade
@@ -38,7 +38,7 @@
     .form-group
       label.sr-only(for='addName', size='30') Name
       input.input-sm.form-control#addName(type="text", name="addName", placeholder='Enter Name', ng-model="addFeed.name") 
-    button.input-sm.btn.btn-default(type="submit", ng-click='add()')
+    button.btn-sm.btn.btn-primary(type="submit", ng-click='add()')
       i.glyphicon.glyphicon-plus
       |  Add
   .clear
