--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block body
-  .container(ng-controller='AppCtrl')
+  .container(ng-controller='FeedelityCtrl')
     .row
       .col-xs-2#menu
         ul.nav.nav-pills.nav-stacked#sidebar
