--- a/views/partials/feeds.jade
+++ b/views/partials/feeds.jade
@@ -16,18 +16,6 @@
           .form-group
             label(for='editName', size='30') Name
             input.form-control#editName(type="text", name="editName", placeholder='Enter name', ng-model="editFeed.name") 
-          .form-group
-            label(for='editTag', size='20') Tags
-            .input-group
-              input.form-control#editTag(type="text", name="editTag", placeholder='Enter tag name')
-              span.input-group-btn
-                button.btn.btn-default(type="button", ng-click='addTag()') Add
-            div
-              p Current tags:
-              p
-                span.label.label-primary(ng-repeat='tag in editFeed.tags') {{tag}} 
-                  a(href='', ng-click='deleteTag($index)')
-                    span.glyphicon.glyphicon-remove
       .modal-footer
         button.btn.btn-default(type="button", data-dismiss="modal") Close
         button.btn.btn-primary(type="button", ng-click='update()') Save
@@ -36,9 +24,6 @@
     .form-group
       label.sr-only(for='addUrl') URL
       input.input-sm.form-control#addUrl(type="url", name="addUrl", placeholder='Enter URL', size='60', ng-model="addFeed.url", required) 
-    .form-group
-      label.sr-only(for='addName', size='30') Name
-      input.input-sm.form-control#addName(type="text", name="addName", placeholder='Enter Name', ng-model="addFeed.name") 
     button.btn-sm.btn.btn-primary(type="submit", ng-click='add()')
       i.glyphicon.glyphicon-plus
       |  Add
@@ -51,7 +36,7 @@
         th State
         th Last checked
         th Fetched
-        th Errors
+        th Missed
     tbody
       tr(ng-repeat='feed in feeds')
         td 
